<resources>
    <string name="app_name">Desafio Android Core</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="already_member">Already a member?</string>
    <string name="register">Register</string>
    <string name="not_member">Not a member yet?</string>
    <string name="sign_in">Sign in</string>
    <string name="logo_placeholder">Logo placeholder</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dish_name_placeholder">"Salada com molho de gengibre"</string>
    <string name="dish_description_placeholder">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et nulla elementum, posuere elit sit amet, gravida odio. Suspendisse ac tortor lorem. Nunc eu nisi efficitur, posuere massa non, sodales."</string>
    <string name="restaurant1_name">"Tony Roma's"</string>
    <string name="restaurant2_name">"Aoyama - Moema"</string>
    <string name="restaurant3_name">"Outback - Moema"</string>
    <string name="restaurant4_name">"Si Señor!"</string>
    <string name="restaurant1_address">"Av. Lavandisca, 717 - Indianópolis, São Paulo"</string>
    <string name="restaurant2_address">"Alameda dos Arapanés, 532 - Moema, São Paulo"</string>
    <string name="restaurant3_address">"Av. Moaci, 187 - Moema, São Paulo"</string>
    <string name="restaurant4_address">"Alameda Jauaperi, 626 - Moema, São Paulo"</string>
    <string name="restaurant1_closing">"Fecha às 22:00"</string>
    <string name="restaurant2_closing">"Fecha às 00:00"</string>
    <string name="restaurant3_closing">"Fecha às 00:00"</string>
    <string name="restaurant4_closing">"Fecha às 01:00"</string>
    <string name="main_dishes">Main dishes</string>
</resources>